# blog

./: .air.toml  .eslintrc.yml  .gitignore  Cargo.toml  Dockerfile  Makefile  compose.yml  go.mod  go.sum  lambda.dockerfile  package.json  pnpm-lock.yaml  sqlc.yaml
.github/workflows/: bun.yml  docker.yml  go.yml  release.yml
cmd/cli/: main.go  routes.go
cmd/server/: 0_standalone.go  db.go  debug.go  lambda.go  main.go  main_lambda.go  static_debug.go  static_embed.go  static_standalone.go  utils.go
config/: config.go  consts.go
frontend/: .gitignore  astro.config.mjs  config.example.jsonc  package.json  pnpm-lock.yaml
infra/: .terraform.lock.hcl  api_gateway.tf  data.tf  database.tf  lambda.tf  lambda_image.tf  locals.tf  main.tf  outputs.tf  variables.tf
internal/db/: .gitignore
internal/dto/: article.go  auth.go  pagination.go  snowflake.go  snowflake_test.go  time.go  user.go  user_test.go
internal/kv/: kv.go  kv_redis.go  kv_sql.go  kv_sql_queries.go  kv_test.go
internal/markdown/: document.go  markdown.go  markdown_test.go
internal/repository/: article.go  article_queries.go  article_test.go  auth.go  auth_test.go  kv.go  kv_redis.go  kv_sql.go  kv_sql_queries.go  kv_test.go  queries.go  user.go  user_queries.go  user_test.go  utils.go  utils_lambda.go  utils_test.go
internal/server/: auth.go  server.go
internal/utils/: goose.go  lazy.go  lazy_param.go  log.go  queries.go  rand.go
migration/: Cargo.toml  Dockerfile  migrate.sh
migration/src/: lib.rs  m20230705_200242_create_users.rs  m20230705_205240_create_posts.rs  (+1 more)
migrations/: embed.go
scripts/: gen-checksums.sh
src/: db.rs  env.rs  error.rs  main.rs
web/: .gitignore  .prettierrc  build.ts  dev.ts  embed.go  embed_map.go  eslint.config.ts  package.json  tailwind.config.ts  tsconfig.json
(+59 files in other folders)
