[workspace]
members = ["."]

[package]
name = "crud1"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
actix-web = "4"
actix-cors = "0.6"
serde_json = "1.0"
dotenvy = "0.15"

[dependencies.sea-orm]
version = "^0.9.0"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros"
]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
panic = 'abort'
